feat: register, admin dashboard

--- a/Rentify.RazorWebApp/Pages/Account/Logout.cshtml
+++ b/Rentify.RazorWebApp/Pages/Account/Logout.cshtml
@@ -2,18 +2,10 @@
 @model Rentify.RazorWebApp.Pages.Account.Logout
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Log out";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-<div>
-    
-</div>
-</body>
-</html>
+<header>
+    <h1>@ViewData["Title"]</h1>
+    <p>You have successfully logged out of the application.</p>
+</header>
