--- a/Rentify.RazorWebApp/Pages/Account/Login.cshtml
+++ b/Rentify.RazorWebApp/Pages/Account/Login.cshtml
@@ -49,6 +49,9 @@
                     </div>
                     <br />
                     <button type="submit" class="btn btn-primary">Login</button>
+                    <div class="mt-3 text-center">
+                        <p>Don't have account? <a asp-page="/Account/Register" class="text-decoration-none">Register now</a></p>
+                    </div>
                 </form>
             </div>
         </div>
