--- a/Rentify.RazorWebApp/Pages/Shared/_Layout.cshtml
+++ b/Rentify.RazorWebApp/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Category/Index">Category</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/CategoryPages/Index">Category</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
