feat: category crud move folder structure and styling

--- a/Rentify.RazorWebApp/Pages/Admin/Dashboard.cshtml
+++ b/Rentify.RazorWebApp/Pages/Admin/Dashboard.cshtml
@@ -28,6 +28,12 @@
                             <i class="fas fa-user-shield"></i> Quản lý Role
                         </a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" asp-page="/Admin/Category/Index">
+                            <i class="fas fa-tags"></i> Quản lý Category
+                        </a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-page="/Admin/Items">
                             <i class="fas fa-box"></i> Quản lý Items
