--- a/Rentify.RazorWebApp/Pages/Shared/_Layout.cshtml
+++ b/Rentify.RazorWebApp/Pages/Shared/_Layout.cshtml
@@ -36,8 +36,8 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-page="/Rentals/MyRentals">
-                                    <i class="fas fa-calendar-alt me-1"></i>Thuê của tôi
+                                <a class="nav-link text-dark" asp-page="/Items/Index">
+                                    <i class="fas fa-box me-1"></i>Loại
                                 </a>
                             </li>
                         }
@@ -57,6 +57,11 @@
                                         <li>
                                             <a class="dropdown-item" asp-page="/Admin/Dashboard">
                                                 <i class="fas fa-tachometer-alt me-2"></i>Dashboard Admin
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" asp-page="/CategoryPages/Index">
+                                                <i class="fas fa-tachometer-alt me-2"></i>Category
                                             </a>
                                         </li>
                                         <li><hr class="dropdown-divider"></li>
