--- a/Rentify.RazorWebApp/Pages/Admin/Dashboard.cshtml
+++ b/Rentify.RazorWebApp/Pages/Admin/Dashboard.cshtml
@@ -24,7 +24,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-page="/Admin/Roles">
+                        <a class="nav-link" asp-page="/Role/Index">
                             <i class="fas fa-user-shield"></i> Quản lý Role
                         </a>
                     </li>
@@ -164,7 +164,7 @@
                                     </a>
                                 </div>
                                 <div class="col-md-3 mb-3">
-                                    <a asp-page="/Admin/Roles/Create" class="btn btn-info btn-block">
+                                    <a asp-page="/Role/Create" class="btn btn-info btn-block">
                                         <i class="fas fa-shield-alt"></i> Thêm Role Mới
                                     </a>
                                 </div>
