--- a/Rentify.RazorWebApp/Pages/Admin/Dashboard.cshtml
+++ b/Rentify.RazorWebApp/Pages/Admin/Dashboard.cshtml
@@ -40,7 +40,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-page="/Admin/Rentals">
+                        <a class="nav-link" asp-page="/Admin/Rentals/Index">
                             <i class="fas fa-handshake"></i> Quản lý Rentals
                         </a>
                     </li>
