--- a/Rentify.RazorWebApp/Pages/Admin/Rentals/Edit.cshtml
+++ b/Rentify.RazorWebApp/Pages/Admin/Rentals/Edit.cshtml
@@ -15,9 +15,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
-                <label asp-for="Rental.UserId" class="control-label">User</label>
-                <select asp-for="Rental.UserId" class="form-control"
-                        asp-items="ViewBag.UserId"></select>
+                <input type="hidden" asp-for="Rental.RentalId" />
             </div>
 
             <div class="form-group">
