Update Comment on Post

--- a/Rentify.RazorWebApp/Pages/Admin/Dashboard.cshtml
+++ b/Rentify.RazorWebApp/Pages/Admin/Dashboard.cshtml
@@ -24,11 +24,10 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-page="/Role/Index">
+                        <a class="nav-link" asp-page="/Admin/Role/Index">
                             <i class="fas fa-user-shield"></i> Quản lý Role
                         </a>
                     </li>
-
                     <li class="nav-item">
                         <a class="nav-link" asp-page="/Admin/Category/Index">
                             <i class="fas fa-tags"></i> Quản lý Category
@@ -170,7 +169,7 @@
                                     </a>
                                 </div>
                                 <div class="col-md-3 mb-3">
-                                    <a asp-page="/Role/Create" class="btn btn-info btn-block">
+                                    <a asp-page="/Admin/Role/Create" class="btn btn-info btn-block">
                                         <i class="fas fa-shield-alt"></i> Thêm Role Mới
                                     </a>
                                 </div>
