--- a/Rentify.RazorWebApp/Pages/Shared/_PostCardList.cshtml
+++ b/Rentify.RazorWebApp/Pages/Shared/_PostCardList.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Rentify.BusinessObjects.Entities.Post>
+﻿@model IEnumerable<Rentify.BusinessObjects.DTO.PostDto.PostResponseDto>
 
 @foreach (var item in Model)
 {
