--- a/Rentify.RazorWebApp/Pages/Admin/Dashboard.cshtml
+++ b/Rentify.RazorWebApp/Pages/Admin/Dashboard.cshtml
@@ -35,7 +35,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-page="/Admin/Items">
+                        <a class="nav-link" asp-page="/ItemPages/Index">
                             <i class="fas fa-box"></i> Quản lý Items
                         </a>
                     </li>
