modify: user entity, add otp and requiry

--- a/Rentify.RazorWebApp/Pages/Account/Profile.cshtml
+++ b/Rentify.RazorWebApp/Pages/Account/Profile.cshtml
@@ -25,8 +25,8 @@
                     <dd class="col-sm-9">@Model.Data.FullName</dd>
                     <dt class="col-sm-3">Ngày sinh</dt>
                     <dd class="col-sm-9">@((Model.Data.BirthDate?.ToString("dd/MM/yyyy")) ?? "—")</dd>
-                    <dt class="col-sm-3">Tên đăng nhập</dt>
-                    <dd class="col-sm-9">@Model.Data.Username</dd>
+                    <dt class="col-sm-3">Email</dt>
+                    <dd class="col-sm-9">@Model.Data.Email</dd>
 
                     <dt class="col-sm-3">Vai trò</dt>
                     <dd class="col-sm-9">@Model.Data.RoleName</dd>
