--- a/Rentify.RazorWebApp/Pages/Admin/Users/Create.cshtml
+++ b/Rentify.RazorWebApp/Pages/Admin/Users/Create.cshtml
@@ -35,9 +35,9 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group mb-3">
-                                    <label asp-for="SystemUser.Username" class="form-label">Username *</label>
-                                    <input type="text" class="form-control" asp-for="SystemUser.Username" required />
-                                    <span asp-validation-for="SystemUser.Username" class="text-danger"></span>
+                                    <label asp-for="SystemUser.Email" class="form-label">Email *</label>
+                                    <input type="text" class="form-control" asp-for="SystemUser.Email" required />
+                                    <span asp-validation-for="SystemUser.Email" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="col-md-6">
