--- a/Rentify.RazorWebApp/Pages/Account/Login.cshtml
+++ b/Rentify.RazorWebApp/Pages/Account/Login.cshtml
@@ -37,9 +37,9 @@
 
                 <form method="post">
                     <div class="form-group">
-                        <label asp-for="Username"></label>
-                        <input type="text" class="form-control" asp-for="Username" required />
-                        <span asp-validation-for="Username" class="text-danger"></span>
+                        <label asp-for="Email"></label>
+                        <input type="text" class="form-control" asp-for="Email" required />
+                        <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
