--- a/Rentify.RazorWebApp/Pages/Account/Register.cshtml
+++ b/Rentify.RazorWebApp/Pages/Account/Register.cshtml
@@ -40,9 +40,9 @@
                 <!-- Thêm enctype -->
                 <form method="post" enctype="multipart/form-data">
                     <div class="form-group mb-3">
-                        <label asp-for="Username" class="form-label">Tên đăng nhập</label>
-                        <input type="text" class="form-control" asp-for="Username" required />
-                        <span asp-validation-for="Username" class="text-danger"></span>
+                        <label asp-for="Email" class="form-label">Email</label>
+                        <input type="text" class="form-control" asp-for="Email" required />
+                        <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
 
                     <div class="form-group mb-3">
