--- a/Rentify.RazorWebApp/Pages/UserPages/Details.cshtml
+++ b/Rentify.RazorWebApp/Pages/UserPages/Details.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.User.Username)
+            @Html.DisplayNameFor(model => model.User.Email)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.User.Username)
+            @Html.DisplayFor(model => model.User.Email)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.User.Password)
